[package]
name = "client"
version = "0.1.0"
authors = ["axisL <34-axisL@users.noreply.git.hdpunk.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6.7", features = ["full"] }
mini-redis = "0.4"
bytes = "1.0.0"

futures = { version = "0.3.0", features = ["thread-pool"]}
futures-util = "0.3.0"